--- a/styles/TransactionForm.css
+++ b/styles/TransactionForm.css
@@ -1,4 +1,5 @@
 .transaction-form {
+    position: relative;
     background-color: #282c34;
     min-height: 70vh;
     padding: 20px 5px 20px 5px;
@@ -7,5 +8,29 @@
 }
 
 .form-control {
-    padding: 0 5px 0 5px;
+    padding: 10px 5px 10px 5px;
+}
+
+.loading-progress {
+    height: 60px !important;
+    width: 60px !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    /* background-color: #282c34; */
+}
+
+.loading-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    z-index: 5;
+
+}
+
+.loading-progress .MuiLinearProgress-barColorPrimary {
+    background-color: '#292929',
 }
