--- a/styles/Signup.css
+++ b/styles/Signup.css
@@ -8,14 +8,14 @@ h1 {
 }
 
 .LoginPage-header {
-  background-color: #282c34;
+  background-color: var(--secondary-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--default-text-color);
 }
 
 .SignInCard {
@@ -24,7 +24,7 @@ h1 {
   padding: 40px 25px 40px 25px;
   border-radius: 8px;
   filter: drop-shadow(5px 5px 10px black);
-  background-color: #282c34;
+  background-color: var(--secondary-color);
 }
 
 .textview-container {
